--- a/web_bl/app/templates/index.html
+++ b/web_bl/app/templates/index.html
@@ -34,6 +34,9 @@
 	
 		<!-- Links -->
 		<ul class="navbar-nav mr-auto">
+                 <li class="nav-item">
+                   <a class="nav-link" href="https://github.com/cybersante/Blacklist_tools">Code source</a>
+                 </li>
 		</ul>
 	</div>
 	<!-- Collapsible content -->
